<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="scoreViewModel"
            type="com.example.click.ScoreViewModel" />


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".ScoreFragment">

        <ImageView
            android:id="@+id/score_iv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            android:src="@drawable/touch_image" />

        <TextView
            android:id="@+id/score_tv_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/overlock_bold"
            android:text="@string/text"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_tv_final_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overlock_bold"
            android:text="@{scoreViewModel.finalscore.toString()}"
            android:textAlignment="center"
            android:textColor="@color/coral"
            android:textSize="72sp" />

        <Button
            android:id="@+id/score_bt_gamble"
            style="@style/my_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gamble"
            android:visibility="@{scoreViewModel.hasgambled? View.GONE:View.VISIBLE}"/>/>


        <Button
            android:id="@+id/score_bt_play_again"
            style="@style/my_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playagain"
            app:backgroundTint="@color/red" />

        <Button
            android:id="@+id/score_bt_return"
            style="@style/my_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return1" />
    </LinearLayout>
</layout>