<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".TitleFragment">

        <TextView
            android:id="@+id/title_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overlock_bold"
            android:text="@string/click"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="45sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/title_iv_click_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/image"
            android:src="@drawable/touch_image" />

        <TextView
            android:id="@+id/title_tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/overlock_bold"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="16sp" />

        <Button
            android:id="@+id/title_bt_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@color/maize" />

    </LinearLayout>
</layout>