<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:padding="10dp"
        tools:context=".GameFragment">

        <Button
            android:id="@+id/game_bt_but1"
            style="@style/my_style"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="@string/click1"
            app:backgroundTint="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/game_bt_but2"
            style="@style/my_style"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="@string/click1"
            app:backgroundTint="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/game_bt_but3"
            style="@style/my_style"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="@string/click1"
            app:backgroundTint="@android:color/holo_orange_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/game_bt_but4"
            style="@style/my_style"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="@string/click1"
            app:backgroundTint="@android:color/holo_orange_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/game_tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overlock_bold"
            android:text="@string/timer"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="76sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/overlock_bold"
            android:text="@string/count"
            android:textAlignment="center"
            android:textColor="@color/coral"
            android:textSize="64sp"
            app:layout_constraintBottom_toTopOf="@+id/game_tv_timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>